# Api_DRF_Blog

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
blog/migrations/: 0001_initial.py  0002_alter_post_options_post_created_on_post_update_on.py  0003_alter_post_description_alter_post_title.py
blog/models/: blog.py
blog/serializers/: post_serializer.py
blog/viewsets/: post_viewset.py
blogpost/: settings.py  urls.py
