[tool.poetry]
name = "blogpost"
version = "0.1.0"
description = "blogpost api"
authors = ["Leonardo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
factory-boy = "^3.3.0"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
